--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>KGF2</header>
+	<nav>
+		<a id="nav-actor" href="#actor">Actor</a>
+			<a id="nav-quote" href="#quote">Actor</a>
+	</nav>
+	<summary>
+		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cupiditate est ex vero aliquid laudantium hic corrupti. Magni ea voluptatum incidunt necessitatibus, consectetur dignissimos doloremque quidem vel eligendi architecto aliquid!
+
+	</summary>
+	<section id="Actor">
+		Actors
+		alia bhatt:kiara<br>
+		srk:jhangir khan
+
+	</section>
+	<section id="quote">
+		<ul>
+			
+				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, adipisci</li>
+					<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, adipisci</li>
+			
+		</ul>
+
+	</section>
+	<aside>
+		IMDB Rating 6/10<br>
+		Release date  25November 2016(india)
+	</aside>
+	<footer>produced by:Gauri Shinde</footer>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
