--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 		srk:jhangir khan
 
 	</section>
-	<section id="quote">
+	<section id="quote">Quotes
 		<ul>
 			
 				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, adipisci</li>
@@ -36,7 +36,7 @@
 		IMDB Rating 6/10<br>
 		Release date  25November 2016(india)
 	</aside>
-	<footer>produced by:Gauri Shinde</footer>
+	<footer>Produced by: &lt name &gt</footer>
 
     <script type="text/javascript" src="./script.js">
 </script>
