--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<header>KGF2</header>
 	<nav>
 		<a id="nav-actor" href="#actor">Actor</a>
-			<a id="nav-quote" href="#quote">Actor</a>
+			<a id="nav-quote" href="#quote">Quotes</a>
 	</nav>
 	<summary>
 		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cupiditate est ex vero aliquid laudantium hic corrupti. Magni ea voluptatum incidunt necessitatibus, consectetur dignissimos doloremque quidem vel eligendi architecto aliquid!
