--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<header>KGF2</header>
 	<nav>
-		<a id="nav-actor" href="#actor">Actor</a>
+		<a id="nav-actor" href="#actor">Actors</a>
 			<a id="nav-quote" href="#quote">Quotes</a>
 	</nav>
 	<summary>
