--- a/main.html
+++ b/main.html
@@ -18,9 +18,9 @@
 
 	</summary>
 	<section id="Actor">
-		Actors
+		<p>Actors
 		alia bhatt:kiara<br>
-		srk:jhangir khan
+		srk:jhangir khan</p>
 
 	</section>
 	<section id="quote">Quotes
