--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cupiditate est ex vero aliquid laudantium hic corrupti. Magni ea voluptatum incidunt necessitatibus, consectetur dignissimos doloremque quidem vel eligendi architecto aliquid!
 
 	</summary>
-	<section id="Actor">
+	<section id="Actor">Actor
 		<p>Actors
 		alia bhatt:kiara<br>
 		srk:jhangir khan</p>
