--- a/main.html
+++ b/main.html
@@ -17,10 +17,8 @@
 		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cupiditate est ex vero aliquid laudantium hic corrupti. Magni ea voluptatum incidunt necessitatibus, consectetur dignissimos doloremque quidem vel eligendi architecto aliquid!
 
 	</summary>
-	<section id="Actor">Actor
-		<p>Actors
-		alia bhatt:kiara<br>
-		srk:jhangir khan</p>
+	<section id="actor">
+		<p>Actors in Movie</p>
 
 	</section>
 	<section id="quote">Quotes
